# shielded-payment-gateway

./: .gitignore  .gitmodules  README.md  ROADMAP.md  SYSTEM_DIAGRAM.txt  diagram.tex  foundry.toml  remappings.txt  shielded-payments.tex
.github/workflows/: ci.yml
circuits/: README.md
circuits/main/: rln_payment_2_8.circom
circuits/rln-payment/: rln.circom  rln_payment.circom
examples/: README.md  credit-mode.ts  rln-mode.ts
sdk/shielded-sdk/src/proof/: rln-client.ts  rln-verifier.ts
sdk/shielded-sdk/test/: batch-e2e.test.ts  rln-e2e.test.ts  rln-verifier-integration.test.ts
sp1-batch/: README.md
sp1-batch/contracts/: foundry.toml
sp1-batch/contracts/src/: BatchVerifier.sol
sp1-batch/contracts/test/: BatchVerifier.t.sol
sp1-batch/elf/: shielded-batch-program
sp1-batch/program/: Cargo.toml
sp1-batch/program/src/: main.rs
sp1-batch/script/: Cargo.toml
sp1-batch/script/src/: main.rs
src/interfaces/: ITangle.sol
src/shielded/: IRLNSettlement.sol  IShieldedGateway.sol  RLNSettlement.sol  ShieldedGateway.sol
test/: LayerZeroAnchorBridge.t.sol  RLNSettlement.t.sol  ShieldedCredits.t.sol
