[package]
name = "shielded-batch-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "6.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
alloy = { version = "1", features = ["full"] }
anyhow = "1"
